--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <!----------MAIN COMIC---------->
     
     <div class="container_header">
-        <a href="#sidney_1">SIDNEY_1</a>
-        <a href="#sidney_2">SIDNEY_2</a>
-        <a href="#sidney_3">SIDNEY_3</a>
-        <a href="#chole_1">CHOLE_1</a>
-        <a href="#tim_1">TIM_1</a>
+        <a href="https://sunkaly.github.io/Comic1/#sidney_1">SIDNEY_1</a>
+        <a href="https://sunkaly.github.io/Comic1/#sidney_2">SIDNEY_2</a>
+        <a href="https://sunkaly.github.io/Comic1/#sidney_3">SIDNEY_3</a>
+        <a href="https://sunkaly.github.io/Comic2/#chole_1">CHOLE_1</a>
+        <a href="https://sunkaly.github.io/Comic2/#tim_1">TIM_1</a>
         <a href="#jenice_1">JENICE_1</a>
     </div>
     <div class="container_main">
